# LMU-Telemetry-Analyzer

./: .gitignore  AGENTS.md  Design-Specification.md  README.md  config.yaml  start-servers.ps1  stop-servers.ps1
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: health.py  segments.py  sessions.py  signals.py
backend/app/core/: config.py  distance_normalizer.py  metrics.py  reference_lap.py  segments.py  signals.py  telemetry.py  track_layout.py
backend/app/models/: health.py  segment.py  session.py  signal.py
backend/app/services/: duckdb_service.py  segment_cache.py
backend/tests/: test_api.py  test_health.py  test_signals.py  test_telemetry.py
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts  services.ts
frontend/src/components/: Layout.tsx  SegmentTable.tsx  SignalPlot.tsx
frontend/src/hooks/: useApi.ts
frontend/src/pages/: Dashboard.tsx  LapDetail.tsx  SessionBrowser.tsx  SessionDetail.tsx
frontend/src/types/: api.ts
